# reasonable

./: .gitignore  .travis.yml  Brick.n3  Cargo.toml  Makefile  README.md  build.rs  example.n3  example.ttl  pyproject.toml  test.py  ttl_to_n3.py
.github/workflows/: Python.yml  builds.yml  ci.yml  deb.yml  manylinux_build.sh  musllinux_build.sh  nightly-builds.yml  pages.yml  publish.yml  publish2.yml  publish3.yml
benches/: my_benchmark.rs
benches/python/: bench.py  requirements.txt
benches/python/buildings/: AOB4(v1.1).ttl  AQUA(v1.1).ttl  ART(v1.1).ttl  BIXB(v1.1).ttl  CHEMX(v1.1).ttl  COWL(v1.1).ttl  CURR(v1.1).ttl  FDPD(v1.1).ttl  GHA_ICS(v1.1).ttl  GILM(v1.1).ttl  HUNT(v1.1).ttl  HWC(v1.1).ttl  JUNGER(v1.1).ttl  KERR(v1.1).ttl  KLEIBER(v1.1).ttl  LFH(v1.1).ttl  LSA(v1.1).ttl  MEYR(v1.1).ttl  MIWF(v1.1).ttl  MRAK(v1.1).ttl  MSC(v1.1).ttl  MSD(v1.1).ttl  MU(v1.1).ttl  OLS(v1.1).ttl  PES_ICS(v1.1).ttl  PINE(v1.1).ttl  ROES(v1.1).ttl  SCC(v1.1).ttl  SCHM(v1.1).ttl  SEQU(v1.1).ttl  SOCS(v1.1).ttl  SPRL(v1.1).ttl  SWL(v1.1).ttl  TAPS(v1.1).ttl  TUPP(v1.1).ttl  VEIH(v1.1).ttl  VM2(v1.1).ttl  VMEP(v1.1).ttl  VMLF(v1.1).ttl  VMTH(v1.1).ttl  (+14 more)
benches/python/mortarmodels/: ACAD(v1.1).ttl  AMRL(v1.1).ttl  ARC(v1.1).ttl  ARTX(v1.1).ttl  ASMUN(v1.1).ttl  BRIG(v1.1).ttl  BWFP(v1.1).ttl  Bainer(v1.1).ttl  C113(v1.1).ttl  CHEM(v1.1).ttl  CONT(v1.1).ttl  CRUS(v1.1).ttl  DH(v1.1).ttl  EPS(v1.1).ttl  GBSF(v1.1).ttl  GIEDT(v1.1).ttl  HART(v1.1).ttl  HICK(v1.1).ttl  HUTCH(v1.1).ttl  KING(v1.1).ttl  MADDY(v1.1).ttl  MANN(v1.1).ttl  MATH(v1.1).ttl  MSB(v1.1).ttl  MUSIC(v1.1).ttl  PHSL(v1.1).ttl  PRB(v1.1).ttl  RECH(v1.1).ttl  RPL(v1.1).ttl  RYER(v1.1).ttl  SHIELDS(v1.1).ttl  SLAB(v1.1).ttl  SLEC(v1.1).ttl  SMOA(v1.1).ttl  STOR(v1.1).ttl  SURGE3(v1.1).ttl  THOR(v1.1).ttl  THUR(v1.1).ttl  VM3A(v1.1).ttl  VM3B(v1.1).ttl  (+14 more)
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_integration.rs  minimal-bfo-alice.ttl
debian/: changelog  control  rules
docs/: ARCHITECTURE_REVIEW.md  Makefile  conf.py  getting-started.rst  index.rst  packaging.md  pyproject.toml
docs/_static/: custom.css
docs/_templates/: layout.html
docs/cli/: index.rst
docs/owl-rules/: index.rst
docs/python-api/: index.rst
example_models/: small1.n3  soda_hall.n3
example_models/ontologies/: Brick.n3  owl.n3
lib/: Cargo.toml
lib/src/: common.rs  disjoint_sets.rs  error.rs  index.rs  lib.rs  pyreason.rs  query.rs  reasoner.rs  tests.rs
python/: Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.dev.txt
python/.github/workflows/: CI.yml
python/src/: lib.rs  pyreason.rs
python/tests/: test_pyoxigraph.py  test_pyreasoner.py
reasonable/: __init__.py
reasonable-wasm/: Cargo.toml  LICENSE_MIT  Makefile  package-lock.json
reasonable-wasm/src/: lib.rs
reasonable-wasm/www/: index.js  package-lock.json  package.json
scripts/: bench_examples.sh  build_deb.sh  build_python_deb.sh  build_python_deb_docker.sh  convert_to_n3.py  reason_owlrl.py  ttl_to_n3.py
src/: algebra.rs  common.rs  disjoint_sets.rs  error.rs  floyd_warshall.rs  graphmanager.rs  index.rs  lib.rs  main.rs  manager.rs  owl.rs  pyreason.rs  python.rs  query.rs  reasoner.rs  sqlite.rs  tests.rs  types.rs
