[package]
name = "reasonable"
version = "0.2.6"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
repository = "https://github.com/gtfierro/reasonable"
homepage = "https://brickschema.org/"
license-file = "LICENSE"
readme = "README.md"
description = "An OWL 2 RL reasoner with reasonable performance"
edition = "2018"
build = "build.rs"

[lib]
name = "reasonable"
crate-type = ["cdylib"]
bench = false

[[bin]]
name = "reasonable"
path = "src/main.rs"
bench = false

[dependencies]
rdf = "0.1.4"
rio_turtle = "0.7.1"
rio_api = "0.7.1"
oxrdf = "0.2.4"
farmhash = "1.1.5"
datafrog = "2.0.1"
roaring = "0.5.2"
itertools = "0.8"
disjoint-sets = "0.4.2"
log = "0.4"
env_logger = "0.7.1"
regex = "1.3.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tinytemplate = "1.2.1"
anyhow = "1.0.60"
pyo3 = { version = "0.24", features = ["extension-module"]}
pyo3-ffi = { version = "0.24", features = ["extension-module"] }
clap = { version = "4.3.10", features = ["derive"] }

[build-dependencies]
pyo3-build-config = "0.23"

[features]
abi3 = ["pyo3/abi3-py39"]

[profile.release]
debug = true

[package.metadata.maturin]
name = "reasonable"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
