[workspace]
members = [
    "lib",
    "cli",
    "python"
]
resolver = "2"

[workspace.package]
version = "0.4.2"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
repository = "https://github.com/gtfierro/reasonable"
homepage = "https://brickschema.org/"
#license-file = "LICENSE"
license = "BSD-3-Clause"
readme = "README.md"
description = "An OWL 2 RL reasoner with reasonable performance"
edition = "2021"
#build = "build.rs"

[workspace.dependencies]
rio_turtle = "0.7.1"
rio_api = "0.7.1"
oxrdf = "0.3.3"
datafrog = "2.0.1"
disjoint-sets = "0.4.2"
log = "0.4"
env_logger = "0.11"
reasonable = { path = "lib", version = "0.4.2" }
clap = { version = "4.3.10", features = ["derive"] }

[profile.release]
debug = true
