[tool.poetry]
name = "reasonable"
version = "0.2.1-a24"
description = "Python interface to 'reasonable', a Datalog implementation of the OWL 2 RL profile"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"
readme = "README.md"
homepage = "https://github.com/gtfierro/reasonable"

[tool.poetry.dependencies]
python = "^3.7"
cffi = "^1.15.1"
libclang = "^14.0.6"
#maturin = {extras = ["patchelf"], version = "^0.13.6"}
maturin = "^0.13.6"

[tool.poetry.dev-dependencies]
maturin = "^0.13"
rdflib = "^6.1"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
