[tool.poetry]
name = "reasonable"
version = "0.2.3"
description = "Python interface to 'reasonable', a Datalog implementation of the OWL 2 RL profile"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"
readme = "README.md"
homepage = "https://github.com/gtfierro/reasonable"

[tool.poetry.dependencies]
python = "^3.9,<4"
cffi = "^1.15.1"
libclang = "^14.0.6"
maturin = "^1.8"

[tool.poetry.group.dev.dependencies]
maturin = "^1.8"
rdflib = "^7.0"

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"
