[package]
name = "reasonable"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# core stack (oxrdf/rio + friends)
rio_turtle.workspace = true
rio_api.workspace = true
oxrdf.workspace = true
datafrog.workspace = true
roaring.workspace = true
itertools.workspace = true
disjoint-sets.workspace = true
log.workspace = true
env_logger.workspace = true
tinytemplate.workspace = true
anyhow.workspace = true
clap.workspace = true
thiserror = "1.0"

# optional deps for legacy query module (rdf stack)
regex = { version = "1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_sexpr = { version = "0.1", optional = true }
farmhash = { version = "1", optional = true }

# keep serde_json if used elsewhere; not required by legacy query
serde_json.workspace = true
serde_derive.workspace = true

[features]
# Default build excludes the legacy query module and its rdf stack
default = []
# Opt-in to compile the legacy query module (pulls in rdf + friends)
legacy-query = ["dep:regex", "dep:serde", "dep:serde_sexpr", "dep:farmhash"]

[profile.release]
debug = true

[package.metadata.maturin]
name = "reasonable"
