[package]
name = "reasonable"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# core stack (oxrdf/rio + friends)
rio_turtle.workspace = true
rio_api.workspace = true
oxrdf.workspace = true
datafrog.workspace = true
disjoint-sets.workspace = true
log.workspace = true
thiserror = "1.0"

# optional deps for legacy query module (rdf stack)
regex = { version = "1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_sexpr = { version = "0.1", optional = true }
farmhash = { version = "1", optional = true }

[features]
# Default build excludes the legacy query module and its rdf stack
default = []
# Opt-in to compile the legacy query module (pulls in rdf + friends)
legacy-query = ["dep:regex", "dep:serde", "dep:serde_sexpr", "dep:farmhash"]
# RDF 1.2 (RDF-star) coexistence: enables a feature-gated match arm
# over `TermRef::Triple(_)` so `reasonable` compiles in workspaces that
# pull in `oxrdf` with its `rdf-12` feature enabled (e.g., alongside
# `shacl` 0.3.x via `rudof_rdf`). `reasonable` itself does not
# implement RDF-star reasoning; the arm panics if a quoted-triple term
# is encountered. Strictly additive when off.
rdf-12 = ["oxrdf/rdf-12"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
path = "../benches/my_benchmark.rs"

[profile.release]
debug = true

[package.metadata.maturin]
name = "reasonable"
