[package]
name = "pyreasonable"
version = "0.2.0-alpha4"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
repository = "https://github.com/gtfierro/reasonable"
homepage = "https://brickschema.org/"
license-file = "LICENSE"
readme = "README.md"
description = "An OWL 2 RL reasoner with reasonable performance"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "pyreasonable"

[dependencies]
reasonable = { version = "0.2.0-alpha4", path=".." }
pyo3 = { version = "0.17", features = ["extension-module", "abi3-py37"] }
oxigraph = "0.3.7"
anyhow = "1.0.66"
