[package]
name = "pyreasonable"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reasonable"
crate-type = ["cdylib"]

[dependencies]
oxrdf.workspace = true
reasonable.workspace = true
pyo3 = { version = "0.25", features = ["extension-module"]}
pyo3-ffi = { version = "0.25", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.25"

[features]
abi3 = ["pyo3/abi3-py39"]

#[package.metadata.maturin]
#name = "reasonable"
